--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/FraudResultManagement.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/FraudResultManagement.html
@@ -4,16 +4,16 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" ></vr-select>
+                    <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" isrequired></vr-select>
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-select datasource="suspicionLevels" datatextfield="name" datavaluefield="id" label="Suspicion Levels" selectedvalues="selectedSuspicionLevels" ismultipleselection></vr-select>
+                    <vr-select datasource="suspicionLevels" datatextfield="name" datavaluefield="id" label="Suspicion Levels" isrequired selectedvalues="selectedSuspicionLevels" ismultipleselection></vr-select>
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-datetimepicker value="fromDate" label="From Date"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="fromDate" label="From" isrequired></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-datetimepicker value="toDate" label="To Date"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="toDate" label="To" isrequired customvalidate="customvalidateTestTo"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
             <vr-row></vr-row>
