--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/RoleManagement.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/RoleManagement.html
@@ -13,10 +13,7 @@
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous=" true"></vr-button>
-                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewRole()">
-                        Add
-                        <span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
-                    </button>
+                    <vr-button type="Add" permissions="TOne/Administration Module/Groups:Add" data-onclick="AddNewRole"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
