--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/BusinessEntityEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/BusinessEntityEditor.html
@@ -1,32 +1,36 @@
-﻿<div vr-modalcontent ng-controller="Security_BusinessEntityEditorController">
-    <vr-modalbody width="'50%'" vr-loader="isGettingData">
+﻿<div vr-modalcontent ng-controller="Security_BusinessEntityEditorController" width="'50%'">
+    <vr-modalbody vr-loader="isGettingData">
         <vr-form name="formBusinessEntityEditor">
             <vr-row>
-                <vr-columns colnum="6" ng-show="{{!isEditMode}}">
-                    <vr-label>Select Users</vr-label>
-                    <vr-select ismultipleselection datasource="optionsUsers.datasource" selectedvalues="optionsUsers.selectedvalues" datatextfield="Name" datavaluefield="UserId"
-                               entityname="Users">
-                    </vr-select>
-                </vr-columns>
-                <vr-columns colnum="6" ng-show="{{!isEditMode}}">
-                    <vr-label>Select Roles</vr-label>
-                    <vr-select ismultipleselection datasource="optionsRoles.datasource" selectedvalues="optionsRoles.selectedvalues" datatextfield="Name" datavaluefield="RoleId"
-                               entityname="Roles">
-                    </vr-select>
+                <vr-columns colnum="6" ng-show="!isEditMode">
+                    <vr-section title="Permission Holders">
+                        <vr-columns colnum="12">
+
+                            <vr-select ismultipleselection label="Users:" datasource="optionsUsers.datasource" selectedvalues="optionsUsers.selectedvalues" datatextfield="Name" datavaluefield="UserId"
+                                       entityname="Users">
+                            </vr-select>
+                        </vr-columns>
+                        <vr-columns colnum="12">
+                            <vr-select ismultipleselection label="Groups:" datasource="optionsRoles.datasource" selectedvalues="optionsRoles.selectedvalues" datatextfield="Name" datavaluefield="RoleId"
+                                       entityname="Roles">
+                            </vr-select>
+                        </vr-columns>
+                    </vr-section>
                 </vr-columns>
                 <vr-columns colnum="6">
-                    <div>
-                        <ul ng-repeat="permission in entityPermissions">
-                            <li>
+                    <vr-section title="Assigned Permissions">
+                        <vr-row ng-repeat="permission in entityPermissions">
+                            <vr-columns colnum="6">
                                 {{permission.name}}
+                            </vr-columns>
+                            <vr-columns colnum="6">
                                 <vr-choices onselectionchanged="permissionsSelected(permission)" selectedindex="permission.selectedFlagOptionIndex">
                                     <vr-choice ng-repeat="permissionFlagOption in permissionFlagOptions">{{permissionFlagOption}}</vr-choice>
                                 </vr-choices>
-                            </li>
-                        </ul>
-                    </div>
+                            </vr-columns>
+                        </vr-row>
+                    </vr-section>
                 </vr-columns>
-
             </vr-row>
         </vr-form>
     </vr-modalbody>
