--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/UserManagement.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/UserManagement.html
@@ -17,10 +17,7 @@
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous=" true"></vr-button>
                     <vr-button type="Reset" ng-show="false"></vr-button>
-                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewUser()">
-                        Add
-                        <span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
-                    </button>
+                    <vr-button type="Add" permissions="TOne/Administration Module/Users:Add" data-onclick="AddNewUser"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
