--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
@@ -12,10 +12,10 @@
                     Last : <number-filed ng-show="true" input-value="periodCount" place-holder="'Type period'" isrequired />
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-select datasource="timePeriod" field="timePeriod.propertyName"  selectedvalues="periodTypeValue" label="" isrequired></vr-select>
+                    <vr-select datasource="timePeriod" field="timePeriod.description"  selectedvalues="periodTypeValue" label="" isrequired></vr-select>
                 </vr-columns>    
                 <vr-columns colnum="2">
-                    <vr-select datasource="variationReportOptions" field="variationReportOptions.propertyName"  selectedvalues="selectedReportOption" ng-model="selectedReport" label="Variation Reports" isrequired></vr-select>
+                    <vr-select datasource="variationReportOptions" field="variationReportOptions.description" selectedvalues="selectedReportOption" ng-model="selectedReportOption" label="Variation Reports" isrequired></vr-select>
                 </vr-columns>     
             </vr-row>
         </div>
@@ -25,7 +25,7 @@
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 
             <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="getVariationReportsData"></vr-button>
+                <vr-button type="Search" formname="formFilter" data-onclick="getVariationReportQuery"></vr-button> <!--"getVariationReportsData"-->
                 <vr-button type="Reset"></vr-button>
             </div>
         </vr-actionbar>
