Security Module - Added Validation on Forms
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23883

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/BusinessEntityEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/BusinessEntityEditor.html
@@ -37,7 +37,7 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" formname="formPermissionEditor" data-onclick="SavePermissions"></vr-button>
+                <vr-button type="Save" formname="formBusinessEntityEditor" vr-disabled="!isPermissionsFlagSelected()" data-onclick="SavePermissions"></vr-button>
                 <vr-button type="Close" data-onclick="close"></vr-button>
             </div>
         </vr-actionbar>
