--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetailsEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetailsEditor.html
@@ -18,12 +18,7 @@
                 </vr-columns>
 
 
-                <vr-columns colnum="2">
-                    <vr-label>Date:</vr-label>
-                </vr-columns>
-                <vr-columns colnum="2">
-                    <vr-label isvalue>{{dateDay}}</vr-label>
-                </vr-columns>
+              
             </vr-row>
 
             <vr-row>
@@ -32,62 +27,57 @@
 
                     <vr-choices onselectionchanged="ctrl.viewVisibilityChanged">
                         <vr-choice isselected="ctrl.isNormalCDRTabShown">CDR</vr-choice>
-                        <vr-choice isselected="ctrl.isNumberProfileTabShow">Number Profile</vr-choice>
-                        <vr-choice isselected="ctrl.isSubscriberThresoldsTabShow">Subscriber Thresolds </vr-choice>
+                        <vr-choice isselected="ctrl.isNumberProfileTabShown">Number Profile</vr-choice>
                     </vr-choices>
 
                     <div>
                         <vr-row>
                             <vr-columns colnum="12">
                                 <div ng-show="ctrl.isNormalCDRTabShown">
-                                    <vr-datagrid datasource="strategyFilters" maxheight="300px">
-                                        <vr-datagridcolumn headertext="' '" widthfactor="3">       <vr-switch value="dataItem.isSelected"></vr-switch>            </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'Filter #'" field="'filterId'" widthfactor="3">                   </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'Description'" field="'description'" widthfactor="20">                   </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'Threshold'">  <vr-textbox value="dataItem.threshold" isrequired ng-if="dataItem.isSelected" min="0" max="99"></vr-textbox>            </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'Period'">  <vr-select datasource="viewScope.periods" datatextfield="Name" datavaluefield="Id" ng-init="dataItem.period = (dataItem.period == undefined ? viewScope.periods[0] : dataItem.period)" selectedvalues="dataItem.period" isrequired ng-show="dataItem.isSelected"></vr-select>       </vr-datagridcolumn>
+                                    <vr-datagrid datasource="normalCDRs" maxheight="300px">
+                                        <vr-datagridcolumn headertext="'MSISDN'" field="'MSISDN'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'IMSI'" field="'IMSI'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'ConnectDateTime'" field="'ConnectDateTime'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'DurationInSeconds'" field="'DurationInSeconds'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CallClass'" field="'CallClass'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CallType'" field="'CallType'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'SubType'" field="'SubType'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'IMEI'" field="'IMEI'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CellId'" field="'CellId'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'UpVolume'" field="'UpVolume'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'DownVolume'" field="'DownVolume'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'ServiceType'" field="'ServiceType'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'ServiceVASName'" field="'ServiceVASName'">  </vr-datagridcolumn>
                                     </vr-datagrid>
 
                                 </div>
                                 <div ng-show="ctrl.isNumberProfileTabShow">
-                                    <div>
-                                        <vr-datagrid datasource="strategyLevels" maxheight="300px">
-                                            <vr-datagridcolumn headertext="'Suspicion Level'" widthfactor="20">  <vr-select datasource="viewScope.suspicionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspicionLevel = (dataItem.suspicionLevel == undefined ? viewScope.suspicionLevels[0] : dataItem.suspicionLevel)" selectedvalues="dataItem.suspicionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
-                                            <vr-datagridcolumn ng-repeat="filter in strategyFilters" ng-show="filter.isSelected" columnindex="$index + 1" headertext="'Filter: ' + filter.filterId" tag="filter">
-                                                <div ng-init="filterIndex = viewScope.strategyFilters.indexOf(colDef.tag)">
-                                                    <vr-switch value="dataItem.StrategyLevelCriterias[filterIndex].isSelected" style="width:50%"></vr-switch>
-                                                    <vr-select style="width:50%" ng-show="dataItem.StrategyLevelCriterias[filterIndex].isSelected" datasource="viewScope.percentages" datatextfield="description" datavaluefield="value" selectedvalues="dataItem.StrategyLevelCriterias[filterIndex].percentage"></vr-select>
-                                                </div>
-
-                                            </vr-datagridcolumn>
+                                        <vr-datagrid datasource="numberProfiles" maxheight="300px">
+                                            <vr-datagridcolumn headertext="'FromDate'" field="'FromDate'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'ToDate'" field="'ToDate'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountOutCalls'" field="'CountOutCalls'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'DiffOutputNumb'" field="'DiffOutputNumb'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountOutInter'" field="'CountOutInter'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountInInter'" field="'CountInInter'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CallOutDurAvg'" field="'CallOutDurAvg'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountOutFail'" field="'CountOutFail'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountInFail'" field="'CountInFail'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'TotalOutVolume'" field="'TotalOutVolume'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'TotalInVolume'" field="'TotalInVolume'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'DiffInputNumbers'" field="'DiffInputNumbers'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountOutSMS'" field="'CountOutSMS'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'TotalIMEI'" field="'TotalIMEI'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'TotalBTS'" field="'TotalBTS'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'TotalDataVolume'" field="'TotalDataVolume'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountInCalls'" field="'CountInCalls'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CallInDurAvg'" field="'CallInDurAvg'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountOutOnNet'" field="'CountOutOnNet'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountInOnNet'" field="'description'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountOutOffNet'" field="'description'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountInOffNet'" field="'description'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountConsecutiveCalls'" field="'description'">  </vr-datagridcolumn>
+                                            <vr-datagridcolumn headertext="'CountInLowDurationCalls'" field="'description'">  </vr-datagridcolumn>
                                         </vr-datagrid>
-
-                                    </div>
-
-
-
-
-
-                                </div>
-                                <div ng-show="ctrl.isSubscriberThresoldsTabShow">
-                                    <div>
-                                        <vr-datagrid datasource="strategyLevels" maxheight="300px">
-                                            <vr-datagridcolumn headertext="'Suspicion Level'" widthfactor="20">  <vr-select datasource="viewScope.suspicionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspicionLevel = (dataItem.suspicionLevel == undefined ? viewScope.suspicionLevels[0] : dataItem.suspicionLevel)" selectedvalues="dataItem.suspicionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
-                                            <vr-datagridcolumn ng-repeat="filter in strategyFilters" ng-show="filter.isSelected" columnindex="$index + 1" headertext="'Filter: ' + filter.filterId" tag="filter">
-                                                <div ng-init="filterIndex = viewScope.strategyFilters.indexOf(colDef.tag)">
-                                                    <vr-switch value="dataItem.StrategyLevelCriterias[filterIndex].isSelected" style="width:50%"></vr-switch>
-                                                    <vr-select style="width:50%" ng-show="dataItem.StrategyLevelCriterias[filterIndex].isSelected" datasource="viewScope.percentages" datatextfield="description" datavaluefield="value" selectedvalues="dataItem.StrategyLevelCriterias[filterIndex].percentage"></vr-select>
-                                                </div>
-
-                                            </vr-datagridcolumn>
-                                        </vr-datagrid>
-
-                                    </div>
-
-
-
-
-
                                 </div>
                             </vr-columns>
                         </vr-row>
