--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
@@ -9,7 +9,7 @@
                     <vr-datetimepicker type="date" label="To:" value="toDate" isrequired></vr-datetimepicker>
                 </vr-columns> 
                 <vr-columns colnum="2">
-                    Last : <number-filed ng-show="true" input-value="periodCount" place-holder="'Type period'" isrequired />
+                    <vr-textbox value="periodCount" label="Last:" isrequired />
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-select datasource="timePeriod" field="timePeriod.description"  selectedvalues="periodTypeValue" label="" isrequired></vr-select>
@@ -43,7 +43,7 @@
                     <vr-datagridcolumn headertext= "'_%'" field="'PeriodTypeValuePercentage'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext= "'Previous_%'" field="'PreviousPeriodTypeValuePercentage'"></vr-datagridcolumn>
               
-                          <!--<vr-datagridcolumn ng-repeat="item in data.TotalDurationsPerDate"></vr-datagridcolumn>-->
+                    <vr-datagridcolumn ng-repeat="item in periodValuesArray" field="'TotalDurationsPerDate[' + $index + '].TotalDuration'" headertext="item"></vr-datagridcolumn>
 
                     <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'"></vr-datagridcolumn>
 
@@ -101,32 +101,7 @@
             </vr-columns>
         </vr-row>
     </div>-->
-    <table border="1">
-        <tr>
-            <th>Name</th>
-            <th>PeriodTypeValueAverage AVG</th>
-            <th>PeriodTypeValuePercentage %</th>
-            <th>PreviousPeriodTypeValuePercentage %</th>
-            <th>CallDate & Total Duration/Amount</th>
-            <th>CarrierAccountID/ZoneID</th>
-        </tr>
-        <tr ng-repeat="item in data " >
-            <td>{{item.Name}}</td>
-            <td>{{item.PeriodTypeValueAverage}}</td>   
-            <td>{{item.PeriodTypeValuePercentage}}</td>
-            <td>{{item.PreviousPeriodTypeValuePercentage}}</td>
-            <td>
-                <table border="1" width="100%">
-                    <tr ng-repeat="i in item.TotalDurationsPerDate">
-                        <td>{{i.CallDate}}</td>
-                        <td>{{i.TotalDuration}}</td>
-                    </tr>
-                </table>  
-            </td>
-            <td>{{item.ID}}</td>
-        </tr>
-
-    </table>
+    
 
 
     <!--<div>
