--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetailsEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetailsEditor.html
@@ -34,7 +34,7 @@
                         <vr-row>
                             <vr-columns colnum="12">
                                 <div ng-show="ctrl.isNormalCDRTabShown">
-                                    <vr-datagrid datasource="normalCDRs" maxheight="300px">
+                                    <vr-datagrid datasource="normalCDRs" maxheight="300px" loadmoredata="loadMoreDataNormalCDRs" on-ready="onNormalCDRsGridReady">
                                         <vr-datagridcolumn headertext="'MSISDN'" field="'MSISDN'">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'IMSI'" field="'IMSI'">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'ConnectDateTime'" field="'ConnectDateTime'">  </vr-datagridcolumn>
@@ -51,33 +51,33 @@
                                     </vr-datagrid>
 
                                 </div>
-                                <div ng-show="ctrl.isNumberProfileTabShow">
-                                        <vr-datagrid datasource="numberProfiles" maxheight="300px">
-                                            <vr-datagridcolumn headertext="'FromDate'" field="'FromDate'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'ToDate'" field="'ToDate'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountOutCalls'" field="'CountOutCalls'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'DiffOutputNumb'" field="'DiffOutputNumb'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountOutInter'" field="'CountOutInter'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountInInter'" field="'CountInInter'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CallOutDurAvg'" field="'CallOutDurAvg'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountOutFail'" field="'CountOutFail'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountInFail'" field="'CountInFail'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'TotalOutVolume'" field="'TotalOutVolume'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'TotalInVolume'" field="'TotalInVolume'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'DiffInputNumbers'" field="'DiffInputNumbers'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountOutSMS'" field="'CountOutSMS'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'TotalIMEI'" field="'TotalIMEI'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'TotalBTS'" field="'TotalBTS'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'TotalDataVolume'" field="'TotalDataVolume'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountInCalls'" field="'CountInCalls'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CallInDurAvg'" field="'CallInDurAvg'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountOutOnNet'" field="'CountOutOnNet'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountInOnNet'" field="'description'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountOutOffNet'" field="'description'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountInOffNet'" field="'description'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountConsecutiveCalls'" field="'description'">  </vr-datagridcolumn>
-                                            <vr-datagridcolumn headertext="'CountInLowDurationCalls'" field="'description'">  </vr-datagridcolumn>
-                                        </vr-datagrid>
+                                <div ng-show="ctrl.isNumberProfileTabShow" >
+                                    <vr-datagrid datasource="numberProfiles" maxheight="300px" loadmoredata="loadMoreDataNumberProfiles" on-ready="onNumberProfilesGridReady">
+                                        <vr-datagridcolumn headertext="'FromDate'" field="'FromDate'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'ToDate'" field="'ToDate'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutCalls'" field="'CountOutCalls'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'DiffOutputNumb'" field="'DiffOutputNumb'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutInter'" field="'CountOutInter'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInInter'" field="'CountInInter'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CallOutDurAvg'" field="'CallOutDurAvg'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutFail'" field="'CountOutFail'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInFail'" field="'CountInFail'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalOutVolume'" field="'TotalOutVolume'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalInVolume'" field="'TotalInVolume'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'DiffInputNumbers'" field="'DiffInputNumbers'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutSMS'" field="'CountOutSMS'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalIMEI'" field="'TotalIMEI'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalBTS'" field="'TotalBTS'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalDataVolume'" field="'TotalDataVolume'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInCalls'" field="'CountInCalls'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CallInDurAvg'" field="'CallInDurAvg'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutOnNet'" field="'CountOutOnNet'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInOnNet'" field="'description'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutOffNet'" field="'description'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInOffNet'" field="'description'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountConsecutiveCalls'" field="'description'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInLowDurationCalls'" field="'description'">  </vr-datagridcolumn>
+                                    </vr-datagrid>
                                 </div>
                             </vr-columns>
                         </vr-row>
