Security Module - Adding Path to Permissions table
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23907

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/BusinessEntityManagement.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/BusinessEntityManagement.html
@@ -25,8 +25,8 @@
                 <vr-datagrid datasource="permissions" menuactions="gridMenuActions" loadmoredata="loadMoreData" on-ready="onMainGridReady">
                     <vr-datagridcolumn headertext="'Holder Name'" field="'HolderName'" widthfactor="5"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Holder Type'" field="'HolderTypeEnum'" widthfactor="5"></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Permission Type'" field="'PermissionType'" widthfactor="5"></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Permissions'" field="'PermissionFlagsDescription'"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Permission Type'" field="'PermissionType'" widthfactor="10"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Permissions'" field="'PermissionFlagsDescription'" widthfactor="10"></vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
 
